crates/check_module_graph/tests/snapshots/test_resolve_promise_export.snap
---
source: crates/check_module_graph/tests/snap/mod.rs
expression: content
---
# `/src/index.ts`

## Source

```ts
async function returnsPromise() {
	return "value";
}

export const promise = returnsPromise();
```

## Module Info

```
Exports {
  "promise" => {
    ExportOwnExport => JsOwnExport::Binding(1)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
BindingId(1) => JsBindingData {
  Name: promise,
  Type: Module(0) TypeId(2),
  Declaration kind: Value
}
```

## Registered types

```
Module TypeId(0) => value: value

Module TypeId(1) => Module(0) TypeId(3)

Module TypeId(2) => instanceof Promise<Module(0) TypeId(0)>

Module TypeId(3) => async Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(2)
}
```
